Modify and complete the No.1 version

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,23 +8,25 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       <div class="archive-tag">
         <h2 class="tag-header">关于我</h2>
         <div class="tag-post-list">
+
           <ul>
-            <li>爱看老高</li>
+            <li>一个喜欢吹牛的普通人</li>
+            <li>ENFP人格</li>
+            <li>爱自由</li>
             <li>爱折腾</li>
-            <li>爱音乐</li>
+            <li>没啥爱好 你喜欢的我都可以喜欢都可以学</li>
+            <li>反正都是半瓶醋</li>
           </ul>
         </div>
       </div>
 
       <div class="archive-tag">
-        <h2 class="tag-header">关注我</h2>
+        <h2 class="tag-header">与我取得联系</h2>
         <div class="tag-post-list">
           <ul>
+
             <li>
-              <a href="https://twitter.com/austinit" target="_blank"> Twitter</a>
-            </li>
-            <li>
-              <a href="https://github.com/austin2035" target="_blank">Github</a>
+            <a href="https://t.me/oooooooorange" target="_blank">Telegram</a>
             </li>
           </ul>
         </div>
@@ -42,11 +44,11 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       </div>
 
       <div class="archive-tag">
-        <h2 class="tag-header">一些作品</h2>
+        <h2 class="tag-header">胡说八道</h2>
         <div class="tag-post-list">
           <ul>
             <li>
-              有点多，我下次整理一下。
+             找个地方,然后躲起来
             </li>
           </ul>
         </div>
