--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,20 +19,17 @@ const year = date.getFullYear();
           <div class="item products">
             <div class="item-title">作品</div>
             <a href="/" target="_blank">本站</a>
-            <a href="https://the.top" target="_blank">TOP Link</a>
-            <a href="https://news.the.top" target="_blank">TOP News</a>
+
           </div>
 
           <div class="item community">
             <div class="item-title">社媒</div>
-            <a href="https://twitter.com/austinit" target="_blank">Twitter</a>
-            <a href="https://github.com/austin2035" target="_blank">Github</a>
-            <a href="https://t.me/austin2035" target="_blank">Telegram</a>
+            <a href="https://t.me/oooooooorange" target="_blank">Telegram</a>
           </div>
 
           <div class="item resources">
             <div class="item-title">友链</div>
-            <a href="https://the.top">THE.TOP</a>
+
           </div>
         </div>
       </div>
