--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import ArchivePostList from "../layouts/ArchivePostList.astro";
 const allPosts = await Astro.glob("./posts/*.md");
-const tags = ["花里胡哨", "MITM", "源码研究","Packet Capture"];
+const tags = ["花里胡哨", "MITM", "源码研究","Packet Capture","游记"];
 const posts = [];
 
 tags.forEach((tag) => {
